# neural_fib_se_bse

./: .gitignore  .gitmodules  Analyze_Data.ipynb  Montecarlo_Approximation_v10_Extended_Heightfield.ipynb  Montecarlo_Approximation_v3_5_preprocess.ipynb  README.md
experiment_archive/: Montecarlo_Approximation_v1_unet.ipynb  Montecarlo_Approximation_v2_fixz.ipynb  Montecarlo_Approximation_v4_stability.ipynb  Montecarlo_Approximation_v5_UNet.ipynb
neural_fib_se_bse/: hubconf.py  simulator.py
preprocess/: CMakeLists.txt
preprocess/cli/: main.cpp
preprocess/extended_heightfield/include/: Abstract_Intersector.h  Abstract_Rasterizer.h  CSG_Resolver.h  Cylinder_Intersector.h  Cylinder_Rasterizer.h  HeightfieldExtractor.h  Sphere_Intersector.h  Sphere_Rasterizer.h  Sphere_Rasterizer_Kernel.h  cuda_matrix.h  cuda_utils.h  cylinder.h  gpu_mapped_object.h  python_utils.h  sphere.h
preprocess/extended_heightfield/src/: Abstract_Intersector.cu  Abstract_Rasterizer.cu  CSG_Resolver.cu  Cuboid_Intersector.cu  Cylinder_Intersector.cu  Cylinder_Rasterizer.cu  HeightfieldExtractor.cpp  HeightfieldExtractor.cu  Sphere_Intersector.cu  Sphere_Rasterizer.cu  Sphere_Rasterizer_Kernel.cu  cuda_utils.cu  gpu_mapped_object.cu  matrix_test.cpp  module.cpp  python_utils.cpp
preprocess/python_binding/: python_binding.py  python_binding.pyproj
train_network/: aetna-2.yaml  codeserver.yaml  fib_surrigate_distributed.yaml  fib_surrogate_distributed.py  fib_surrogate_distributed_integrated.py  fib_surrogate_preprocess.yaml  fib_surrogate_preprocess_integrated.py  preprocess.py  preprocess_data.yaml  pvc.yaml
train_network/config_data/: Cylinder_Vv0p3_r10-20_h100-150_Uniform_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r10-20_h100-150_vonMisesFisher_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r10-20_h100-150_vonMisesFisher_PlusSampling_Num2_ITWM-Euler.txt  Cylinder_Vv0p3_r10-20_h300-500_Uniform_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r10-20_h300-500_vonMisesFisher_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r10-20_h300-500_vonMisesFisher_PlusSampling_Num2_ITWM-Euler.txt  Cylinder_Vv0p3_r30-50_h100-150_Uniform_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r30-50_h100-150_vonMisesFisher_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r30-50_h100-150_vonMisesFisher_PlusSampling_Num2_ITWM-Euler.txt  Cylinder_Vv0p3_r30-50_h300-500_Uniform_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r30-50_h300-500_vonMisesFisher_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r30-50_h300-500_vonMisesFisher_PlusSampling_Num2_ITWM-Euler.txt  Cylinder_Vv0p3_r5-10_h100-150_Uniform_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r5-10_h100-150_vonMisesFisher_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r5-10_h100-150_vonMisesFisher_PlusSampling_Num2_ITWM-Euler.txt  Cylinder_Vv0p3_r5-10_h300-500_Uniform_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r5-10_h300-500_vonMisesFisher_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p3_r5-10_h300-500_vonMisesFisher_PlusSampling_Num2_ITWM-Euler.txt  Cylinder_Vv0p5_r10-20_h100-150_Uniform_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p5_r10-20_h100-150_vonMisesFisher_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p5_r10-20_h100-150_vonMisesFisher_PlusSampling_Num2_ITWM-Euler.txt  Cylinder_Vv0p5_r10-20_h300-500_Uniform_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p5_r10-20_h300-500_vonMisesFisher_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p5_r10-20_h300-500_vonMisesFisher_PlusSampling_Num2_ITWM-Euler.txt  Cylinder_Vv0p5_r30-50_h100-150_Uniform_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p5_r30-50_h100-150_vonMisesFisher_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p5_r30-50_h100-150_vonMisesFisher_PlusSampling_Num2_ITWM-Euler.txt  Cylinder_Vv0p5_r30-50_h300-500_Uniform_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p5_r30-50_h300-500_vonMisesFisher_PlusSampling_Num1_ITWM-Euler.txt  Cylinder_Vv0p5_r30-50_h300-500_vonMisesFisher_PlusSampling_Num2_ITWM-Euler.txt  (+35 more)
unet_netwrok_porus_dataset/: evaluation_bse_se.ipynb  model_evaluation_test_data.ipynb  requirements.txt  segmentation_porous_material.ipynb  sort_data.ipynb  train_bse.ipynb  train_hyperstack7channels.ipynb  train_se.ipynb
